// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. gradient 1`] = `
<View>
  <RNSVGSvgView>
    <RNSVGGroup>
      <RNSVGDefs>
        <RNSVGLinearGradient />
      </RNSVGDefs>
      <RNSVGRect />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`2. gradient with a child 1`] = `
<View>
  <RNSVGSvgView>
    <RNSVGGroup>
      <RNSVGDefs>
        <RNSVGLinearGradient />
      </RNSVGDefs>
      <RNSVGRect />
      <Text>
        Some example text
      </Text>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`3. overlay gradient 1`] = `
<View>
  <RNSVGSvgView>
    <RNSVGGroup>
      <RNSVGDefs>
        <RNSVGLinearGradient />
      </RNSVGDefs>
      <RNSVGRect />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`4. overlay gradient with a child 1`] = `
<View>
  <RNSVGSvgView>
    <RNSVGGroup>
      <RNSVGDefs>
        <RNSVGLinearGradient />
      </RNSVGDefs>
      <RNSVGRect />
      <Text>
        Some example text
      </Text>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
